# depmon

./: .clang-format  .eslintrc.json  .gitignore  .parcelrc  .pre-commit-config.yaml  .prettierignore  .prettierrc  CMakeLists.txt  README.md  define_buildversion.py  generate_server_embeds.py  mkdocs.yml  mockBackend.js  package.json  partitions.csv  platformio-local.sample.ini  platformio.ini  pnpm-lock.yaml  requirements.txt  sdkconfig.defaults  tsconfig.json
.github/actions/build-esp/: action.yaml
.github/workflows/: ci.yaml  docs.yaml
boards/: sunton_esp32_3248s035c.json
components/dns_server/: dns_server.c
components/http_server/: .gitignore  CMakeLists.txt  http_server.cpp
components/ui/: CMakeLists.txt  ui.c  ui.h
components/ui/components/: ui_comp.c  ui_comp_departureitem.c  ui_comp_departureitem.h  ui_comp_hook.c  ui_comp_hook.h
components/ui/fonts/: ui_font_terminus36bold.c
components/ui/screens/: ui_mainscreen.c
docs/: development.md  gen_index.py  hooks.py  installer.md  related.md  usage.md
docs/css/: extra.css
esp/: CMakeLists.txt  bvg_api_client.cpp  bvg_api_client.hpp  http_server.cpp  idf_component.yml  lcd.cpp  lcd.hpp  main.cpp  nvs_engine.cpp  sdkconfig.defaults  time.cpp  time.hpp  utils.cpp
esp/assets/: unicode_ranges_german.txt
esp/main/: CMakeLists.txt  bvg_api_client.cpp  bvg_api_client.hpp  http_server.cpp  http_server.hpp  idf_component.yml  lcd.cpp  main.cpp  nvs_engine.cpp  nvs_engine.hpp  time.cpp  time.hpp  utils.cpp  utils.hpp
esp/main/ui/: ui.cpp  ui.hpp
esp/main/ui/fonts/: montserrat_regular_28.c  montserrat_regular_96.c  roboto_condensed_light_28_4bpp.c  roboto_condensed_regular_28_4bpp.c
esp/ui/: ui.cpp  ui.hpp
esp/ui/fonts/: montserrat_regular_16.c  montserrat_regular_72.c
frontend/: .eslintrc.json  .parcelrc  Root.tsx  Types.ts  index.html  index.tsx  mockBackend.js  package.json  style.less  tsconfig.json
frontend/api/: Requests.ts  Responses.ts
frontend/components/: LineIcon.tsx
frontend/src/: App.tsx  Types.ts  index.html  stations.ts  style.less
frontend/src/api/: Requests.ts  Responses.ts
frontend/src/components/HomeTab/: HomeTab.tsx
frontend/src/components/SystemInformationTab/: SystemInformationTab.tsx
frontend/src/tabs/HomeTab/: HomeTab.tsx
frontend/src/tabs/SystemInformationTab/: SystemInformationTab.tsx
frontend/src/util/: Ajax.ts
frontend/tabs/HomeTab/: HomeTab.tsx  ServicesSection.tsx  StationChangeDialog.tsx  useSnackbarState.ts
frontend/tabs/SystemInformationTab/: SystemInformationTab.tsx
frontend/util/: Ajax.ts  Constants.ts
include/: lv_conf.h  lv_drv_conf.h
lib/ui/: CMakeLists.txt  filelist.txt  ui.c  ui.h  ui_events.h
lib/ui/components/: ui_comp.h  ui_comp_departureitem.c  ui_comp_departureitem.h  ui_comp_hook.c  ui_comp_hook.h
lib/ui/screens/: ui_mainscreen.c
main/: CMakeLists.txt  bvg_api_client.cpp  bvg_api_client.hpp  http_server.cpp  http_server.hpp  idf_component.yml  lcd.cpp  lcd.h  main.cpp  nvs_engine.cpp  time.cpp  utils.hpp
main/data/: root.html
main/ui/: CMakeLists.txt  README.md  filelist.txt  ui.c  ui.cpp  ui.h  ui.hpp  ui_helpers.c  ui_helpers.h  ui_interaction.hpp
main/ui/components/: ui_comp_departureitem.c
main/ui/fonts/: montserrat_regular_16.c  roboto_condensed_light_28_4bpp.c  roboto_condensed_regular_28_4bpp.c  robotocondensedregular16.c  robotocondensedregular28.c  robotocondensedregular96.c  ui_font_terminus28bold.c
main/ui/images/: ui_img_ubahn_png.c
main/ui/screens/: ui_departures.c  ui_logs.c  ui_mainscreen.c  ui_splash.c
mkdocs/: gen_manifest.py  mkdocs.yml
mkdocs/hooks/: gen_manifest.py
mkdocs_theme_overrides/: main.html
scripts/: merge_firmware.sh
simulator/: platformio.ini  sdl2_build_extra.py
simulator/include/: lv_conf.h  lv_drv_conf.h  lvgl_sdl.h
simulator/lib/: ui
simulator/src/: main.cpp
squareline/: .gitignore  bvg_departures.sll  bvg_departures.spj
squareline/assets/: ui_font_robotocondensed96regular.c  ui_font_robotocondensed96regular.fcfg  ui_font_terminus16regular.c  ui_font_terminus16regular.fcfg  ui_font_terminus28bold.fcfg  ui_font_terminus36bold.fcfg  unicode_ranges_german.txt
squareline/components/: departureitem.ecomp
src/: .gitignore  main.cpp
support/: sdl2_build_extra.py
support/simulator/: main.cpp
